Update and rename README.md to README.me

--- a/README.me
+++ b/README.me
@@ -32,12 +32,15 @@ Os requisitos (tanto do cliente como da instituição de ensino) abrangidos por 
 - :heavy_check_mark: **RF 07:** Sprint;
 - :heavy_check_mark: **RF 08:** Sprint Planning;
 - :heavy_check_mark: **RF 09:** Sprint Review;    
-- :heavy_check_mark: **RF 10:** Dailys;
-- :heavy_check_mark: **RF 11:** Retrospective;
-- :heavy_check_mark: **RF 12:** DOR - Definition of Ready;
-- :heavy_check_mark: **RF 13:** DOD - Definition of Done;
-- :heavy_check_mark: **RF 15:** Kanban;
-- :heavy_check_mark: **RF 16:** Artefatos do Scrum;    
+- :heavy_check_mark: **RF 10:** Sprint Backlog;
+- :heavy_check_mark: **RF 11:** Dailys;
+- :heavy_check_mark: **RF 12:** Retrospective;
+- :heavy_check_mark: **RF 13:** DOR – Definition of Ready;
+-: heavy  check  mark: **RF 14:** DOD – Definition of Done;
+-: heavy  check  mark: **RF 15:** Planning Poker;
+- :heavy_check_mark: **RF 16:** Kanban;
+- :heavy_check_mark: **RF 17:** Artefatos do Scrum;
+- :heavy  check  mark:  **RF18:** MVP  
 - :heavy_check_mark: **RNF 01:** Documentação no GitHub;
 - :heavy_check_mark: **RNF 02:** Linguagem de programação JavaScript;
 - :heavy_check_mark: **RNF 03:** Linguagem de marcação HTML e estilos CSS;
@@ -94,10 +97,54 @@ Este requisito trata da divisão de tempo adotada. Cada período, de aproximadam
 Este requisito trata da adoção de um planejamento de tarefas (tasks) a serem definidos e cumpridos em cada sprint, de forma a facilitar que os objetivos sejam atingidos.
 
 
-- 🧷 **RF 10:** Dailys
+- 🧷 **RF 10:** Sprint Backlog
 
 
-Este requisito trata das reuniões diárias entre todos os membros da equipe para acompanhamento, avaliação e redefinição (se necessário) das próximas ações. Durante as dailys pudemos redefinir algumas práticas e melhorar a comunicação e troca de ideias entre a equipe.  
+Este requisito trata da elaboração de um plano de ação básico a ser desenvolvido para a elaboração do projeto final.
+
+- 🧷 **RF 11:** Dailys
+
+Este requisito trata das reuniões diárias entre todos os membros da equipe para acompanhamento, avaliação e redefinição (quando necessário) das  ações. Durante as dailys pudemos redefinir algumas práticas e melhorar a comunicação e troca de ideias entre a equipe.  
+
+- 🧷 **RF 12:** Retrospective
+
+
+Este requisito trata do momento em que o time se dedica a inspecionar seu trabalho, avaliando como foi a última Sprint e criando um plano de ação para a próxima. Esta avaliação e planejamento foi realizado logo ao término da Sprint anterior.
+
+
+- 🧷 **RF 13:** DOR – Definition of Ready
+
+
+Este requisito trata do conjunto de “combinados” entre o Scrum Team que cada item de backlog que vai para a Sprint Planning deve atender. Os itens de backlog que atendam a DOR são itens Ready. São importantes para garantir que os itens do backlog estejam prontos para serem trabalhados na Sprint e para evitar que o time perca tempo durante a Sprint Planning discutindo itens que não estão prontos.
+
+
+- 🧷 **RF 14:** DOD -Definition of Done
+
+Este requisito trata o da criação e conferência de uma espécie de checklist que deve ser cumprida para que o item do backlog esteja, de fato, pronto.
+
+
+- 🧷 **RF 15:** Planning Poker
+
+Este requisito trata da aplicação de um jogo para distribuição das tarefas e avaliação do tempo a ser gasto. Infelizmente tomamos ciência do que se tratava a proposta somente neste sprint, não tendo sido realizado nos sprints anteriores.
+
+- 🧷 **RF 16:** Kanban
+
+Este requisito trata da estrutura de gestão de projetos para o gerenciamento do fluxo de trabalho. Foi aplicado na planilha de projetos do GitHub e através de planilha Excel.
+
+
+- 🧷 **RF 17:** Artefatos do Scrum
+
+Este requisito trata dos três artefatos do Scrum: backlog do produto, backlog do sprint e o incremento que conforme pode ser observado nos itens anteriores foram concluídos.
+
+
+- 🧷 **RF 18:** MVP (Minimum Viable Product – ou Produto Mínimo Viável)
+
+Este requisito trata da construção da versão mais simples e enxuta do produto final, que foi apresentada no início do projeto.
+
+
+
+
+
 
 
 - 🧷 **RNF 01:** Documentação no GitHub
@@ -109,7 +156,7 @@ Este requisito trata da utilização da plataforma GitHub para a organização d
 - 🧷 **RNF 02:** Linguagem de programação JavaScript
 
 
-Este requisito trata do uso da linguagem JavaScript em trechos do desenvolvimento da página do site.
+Este requisito trata do uso da linguagem JavaScript em trechos do desenvolvimento da página do site, para interação com o cliente.
 
 
 - 🧷 **RNF 03:** Linguagem de marcação HTML e estilos CSS
@@ -118,13 +165,13 @@ Este requisito trata do uso da linguagem JavaScript em trechos do desenvolviment
 Este requisito trata do uso da linguagem de marcação HTML e de estilos CSS no desenvolvimento da página do site. Até o momento, foi a mais utilizada pela equipe.
 
 
-- 🧷 **RNF 04:** Uso do framework Boostrap
+- 🧷 **RNF 04:** Uso do framework Bootstrap
 
 
-Este requisito trata da utilização dos recursos do framework Boostrap para facilitar a inserção de elementos como botões, e outros, no desenvolvimento das páginas.
+Este requisito trata da utilização dos recursos do framework Bootstrap para facilitar a inserção de elementos como botões, e outros, no desenvolvimento das páginas.
 
 
-Por fim, no desenvolvimento do projeto, foram utilizados até o momento as tecnologias: JavaScript; HTML, CSS, Bootstrap e Figma.
+Por fim, no desenvolvimento do projeto, foram utilizados até o momento as tecnologias: JavaScript; HTML, CSS, Bootstrap e Figma. Para a criação dos módulos, exercícios de fixação e certificado, utilizamos também os aplicativos Canva, WordWall e YouTube.
 
 
 <span id="#metricas">
@@ -151,18 +198,9 @@ Em prol de um melhor aproveitamento das habilidades de cada integrante, as taref
 Tomamos por base três questões de aspectos básicos de nossa trajetória no desenvolvimento do site e aplicação do Framework Scrum, que foram discutidos em grupo:
 
 
-- 🧷 **- O que funcionou bem?**
-Concordamos que o resultado até o momento foi muito positivo: houve a participação e comprometimento de todos, em sistema de autogerenciamento. Houve a melhoria da comunicação, por meio do uso do GitHub, criação de grupo no Teams e WhatsApp. Sentimos que tarefas fluiram melhor, com assertividade e rapidez. A aplicação do framework Scrum foi muito satisfatória. Todas as decisões foram compartilhadas.
+- 🧷 **- O que funcionou bem? E o que pode melhorar?**
+Concordamos que o resultado foi muito positivo: o desafio foi grande e exigiu muita dedicação e pesquisa de todos. Cada membro da equipe participou e comprometeu-se com o projeto, em sistema de autogerenciamento. Houve a melhoria da comunicação, contudo este item continua sendo um desafio entre os membros da equipe, e deverá ser melhor discutido e corrigido no decorrer dos próximos trabalhos do curso. Para a nossa comunicação, além das Dailys, fizemos uso do GitHub e criamos um grupo no Teams e WhatsApp. Quanto ao autogerenciamento, sentimos que tarefas fluíram com assertividade e rapidez. A aplicação do framework Scrum foi muito satisfatória. Todas as decisões para o desenvolvimento do projeto foram compartilhadas, discutidas e aprovadas por toda equipe.
 
-
-- 🧷 **- O que pode melhorar?**
-A atenção ao tempo de execução das tasks.
-
-
-- 🧷 **Sugestões para a API/ Desenvolvimento do site**
-Ampliar e melhorar ainda mais aspectos relacionados à responsividade e interatividade do site.    
-   
-   
 <span id="links">
    
 ## Links Sprints:
@@ -176,17 +214,14 @@ Ampliar e melhorar ainda mais aspectos relacionados à responsividade e interati
    
  Web Site teste: https://our-time-fatec.github.io/expert-treinamentos/
 <!--
+ Link dos vídeos no YouTube:                          Módulo 1 - https://youtu.be/kG2qUC2OP4E ;  Módulo 2 - https://youtu.be/FhOF-K7QmDA  ;  Módulo 3 - https://youtu.be/jML2f0Ccv1M
 
+Link dos exercícios de fixação no WordWall: Módulo 1 –https://wordwall.net/resource/ 55771354;                                                                     Módulo 2 – https://wordwall.net/pt/resource/56975524 ; Módulo 3 - https://wordwall.net/pt/resource/57023880
+		
+ Link do Web Site do produto final:         https://expert-treinamentos.vercel.app/index.html
 
-**Here are some ideas to get you started:**
+<!--
 
-
-🙋‍♀️ A short introduction - what is your organization all about?
-🌈 Contribution guidelines - how can the community get involved?
-👩‍💻 Useful resources - where can the community find your docs? Is there anything else the community should know?
-🍿 Fun facts - what does your team eat for breakfast?
-🧙 Remember, you can do mighty things with the power of [Markdown](https://docs.github.com/github/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax)
--->
 
 
 
